<resources>
    <string name="app_name"></string>
    <string name="home_message">Login with your credentials below</string>
    <string name="login_button">Login</string>
    <string name="reg_button">Register</string>
    <string name="reg_message">Don\'t have a login? Register below.</string>
    <string name="forgot_pass">Trouble accessing account?</string>
    <string name="forgot_user">Forgot Username?</string>
    <string name="user_hint">Username</string>
    <string name="pass_hint">Password</string>
    <string name="account_help">Enter the associated email and an email will be sent to the corresponding email account with instructions on how to proceed.</string>
    <string name="acc_em_phone">Email</string>
    <string name="after_login">Login Screen</string>
    <string name="re_enter_pass">Enter password again</string>
    <string name="enter_email">Email</string>
    <string name="no_pass_match">Passwords Don\'t Match</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="auth_succeeded">Authentication Suceeded</string>
    <string name="user_pass_missing">Username or password missing</string>
    <string name="no_email_pass">Email or password not entered</string>
    <string name="reg_succeeded">Succesfully Registered!</string>
    <string name="auth_failed_or_exists">Email already in use</string>
    <string name="info_activity">Enter personal information</string>
    <string name="phone_num">Phone number</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="verify_email">Verification Email Sent</string>
    <string name="proceed">Continue</string>
    <string name="names_phone_missing">One of the fields is empty</string>
    <string name="email_changed">Email was changed</string>
    <string name="teacher">Teacher</string>
    <string name="parent">Parent</string>
    <string name="check_par_teach">Check your role</string>
    <string name="checkbox_empty">Please select a checkbox</string>
    <string name="sign_wout_reg">Click to sign out without entering data</string>
    <string name="name_short">First and Last name must be at least 2 letters long</string>
    <string name="phone_num_short">Enter a valid phone number</string>
    <string name="invalid_phone">Invalid symbols used in phone number</string>
    <string name="pass_length_limit">Password must be between 8 - 16 characters</string>
    <string name="edit_account">Edit Account Settings</string>
    <string name="nav">Teacher and Me - Navigation Menu</string>
    <string name="live_chat">Live chat with parents or teachers</string>
    <string name="course">Courses</string>
    <string name="add_course">Add a course</string>
    <string name="how_to">How do I use this app?</string>
    <string name="remove_course">Remove Course?</string>
    <string name="remove_student_pop">Delete Student?</string>
    <string name="remove_student">Remove Student!</string>
    <string name="reg_title">Registration</string>
    <string name="login">Teacher and Me - Login Screen</string>
    <string name="course_title">Teacher and Me - Courses</string>
    <string name="delete_student">Deleting the student will delete all student files within this course from the database. Would you like to proceed?</string>
    <string name="delete_course">Deleting the course will delete all students and student files from the database. Would you like to proceed?</string>
    <string name="add_stud">Enroll Students</string>
    <string name="view_stud">View Class List</string>
    <string name="assignments">Assignments</string>
    <string name="quiz">Quizzes</string>
    <string name="test">Tests</string>
    <string name="exam">Exams</string>
    <string name="course_stats">Course Statistics</string>
    <string name="take_attendance">Take Class Attendance for this Day</string>
    <string name="view_attendance">View Past Class Attendance</string>
    <string name="add_students">Enter the first and last name of the student you wish to add. To add multiple students simply write the new student name on the next line as such: \nJohn Doe \nHarry Potter \nDue note that adding children the same first and last name is allowed</string>
    <string name="title_activity_kk">kk</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dynam_course_view">DynamCourseView</string>
    <string name="no_stud_enroll">There are no sudents are currently enrolled at this time</string>
    <string name="student_succ_add">Student(s) succesfully added</string>
    <string name="no_input_student">No input detected</string>
    <string name="invalid_student_inputF">Invalid characters used fName</string>
    <string name="invalid_student_inputL">Invalid characters used lName</string>
    <string name="student_space_missing">Last name may not have been added</string>
    <string name="sick">Sick</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="other">Other</string>
    <string name="over_write_attendance">Take attendance for:</string>
    <string name="over_write_attendance_message">Clicking okay will change all students attendance status to <i>present</i> and erase any existing data. Would you like to proceed?</string>
    <string name="add_assignment">New Assignment</string>
    <string name="assDesc">In progress</string>
    <string name="assignmentExampleHint">Ex: Book Report on Harry Potter</string>
    <string name="assignmentName"><b>Assignment Name</b></string>
    <string name="assignmentWeight"><b>Assignment Weight (percentage)</b></string>
    <string name="exampleWeight">22%</string>
    <string name="dueDate"><b> Due Date </b></string>
    <string name="assignedDate"><b>Assigned Date</b></string>
    <string name="createAssignment">Create Assignment</string>
    <string name="assignedDateHint">yyyy/MM/dd</string>
    <string name="fields_empty">One or more fields are not filled</string>
    <string name="remove_assignment">Delete Assignment?</string>
    <string name="delete_assignment">Deleting the assignment will permanently delete it from the database. Would you like to proceed?</string>
    <string name="delete_quiz">Deleting the quiz will permanently delete it from the database. Would you like to proceed?</string>
    <string name="delete_test">Deleting the test will permanently delete it from the database. Would you like to proceed?</string>
    <string name="delete_exam">Deleting the assignment will permanently delete it from the database. Would you like to proceed?</string>
    <string name="add_test">Add new test</string>
    <string name="new_quiz">New Quiz</string>
    <string name="remove_quiz">Delete quiz?</string>
    <string name="remove_test">Delete test?</string>
    <string name="remove_exam">Delete exam?</string>
    <string name="quizName">Quiz Name</string>
    <string name="quizNameExample">Chapter 2.2 Quiz</string>
    <string name="quiz_weight">Quiz Weight</string>
    <string name="dayOfQuiz">Quiz Date</string>
    <string name="createQuiz">Create Quiz</string>
    <string name="quiz_succ_add">Quiz Succesfully Added</string>
    <string name="test_name">Test Name</string>
    <string name="test_weight">Test Weight</string>
    <string name="test_date">Test Date</string>
    <string name="exam_name">Exam Name</string>
    <string name="exam_weight">Exam Weight</string>
    <string name="exam_date">Exam Date</string>
    <string name="test_hint">Chapter 2 test</string>
    <string name="exam_hint">Midterm Exam</string>
    <string name="new_exam">New Exam</string>
    <string name="title_activity_student_view">StudentView</string>
    <string-array name="trueOrFalse">
        <item>True</item>
        <item>False</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
